tmux config and documentation

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,72 +1,101 @@
-# 0 is too far from ` ;)
+# ---------- Core behavior ----------
 set -g base-index 1
+setw -g pane-base-index 1
+set -g renumber-windows on
+set -g history-limit 100000
 
+# ---------- Prefix and input ----------
 unbind C-b
 set -g prefix C-a
+bind C-a send-prefix
 
-# Automatically set window title
-set-window-option -g automatic-rename on
-set-option -g set-titles on
+# Keep Esc handling responsive for Vim and copy-mode.
+set -s escape-time 10
+set -g focus-events on
 
-set-option -g default-terminal "screen-256color"
-set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
-set -g status-keys vi
-set -g history-limit 10000
+# ---------- Terminal capabilities ----------
+# tmux 3.x best practice: advertise tmux's own terminfo entry.
+set -g default-terminal "tmux-256color"
+# Treat client terminals as RGB-capable without accumulating duplicates on reload.
+set -g terminal-features "*:RGB"
+set -g set-clipboard on
+# Prefer a native clipboard command for copy-mode yanks.
+# Priority: wl-copy (Wayland) -> pbcopy (macOS) -> xclip -> xsel.
+run-shell -b 'if command -v wl-copy >/dev/null 2>&1; then tmux set -s copy-command "wl-copy"; elif command -v pbcopy >/dev/null 2>&1; then tmux set -s copy-command "pbcopy"; elif command -v xclip >/dev/null 2>&1; then tmux set -s copy-command "xclip -in -selection clipboard"; elif command -v xsel >/dev/null 2>&1; then tmux set -s copy-command "xsel --input --clipboard"; else tmux set -s copy-command "cat >/dev/null"; fi'
 
+# ---------- Editing and navigation style ----------
 setw -g mode-keys vi
-set -g mouse off
+set -g status-keys vi
+set -g mouse on
 setw -g monitor-activity on
+set -g visual-activity off
 
-bind-key v split-window -h
-bind-key s split-window -v
+# ---------- Naming and titles ----------
+set -g allow-rename off
+setw -g automatic-rename on
+set -g set-titles on
+set -g set-titles-string "#S:#W"
 
-bind-key J resize-pane -D 5
-bind-key K resize-pane -U 5
-bind-key H resize-pane -L 5
-bind-key L resize-pane -R 5
+# ---------- Pane and window controls ----------
+# Split panes in the current pane's working directory.
+bind v split-window -h -c "#{pane_current_path}"
+bind s split-window -v -c "#{pane_current_path}"
 
-bind-key M-j resize-pane -D
-bind-key M-k resize-pane -U
-bind-key M-h resize-pane -L
-bind-key M-l resize-pane -R
-
-# Vim style pane selection
+# Prefix + hjkl selects panes.
 bind h select-pane -L
-bind j select-pane -D 
+bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# Use Ctrl-vim keys without prefix key to switch panes
+# Prefix + Shift-hjkl resizes by 5 cells.
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+# Alt + hjkl resizes one cell at a time without prefix.
+bind -n M-h resize-pane -L
+bind -n M-j resize-pane -D
+bind -n M-k resize-pane -U
+bind -n M-l resize-pane -R
+
+# Ctrl + hjkl selects panes without prefix.
 bind -n C-h select-pane -L
-bind -n C-j select-pane -D 
+bind -n C-j select-pane -D
 bind -n C-k select-pane -U
 bind -n C-l select-pane -R
 
-# Use Ctrl-arrow keys without prefix key to switch panes
+# Ctrl + arrows selects panes without prefix.
 bind -n C-Left select-pane -L
 bind -n C-Right select-pane -R
 bind -n C-Up select-pane -U
 bind -n C-Down select-pane -D
 
-# Shift arrow to switch windows
-bind -n S-Left  previous-window
+# Shift + arrows switches windows.
+bind -n S-Left previous-window
 bind -n S-Right next-window
-#bind -n C-Left previous-window
-#bind -n C-Right next-window
 
-# No delay for escape key press
-set -sg escape-time 0
+# ---------- Copy-mode helpers ----------
+bind Enter copy-mode
+bind -T copy-mode-vi v send-keys -X begin-selection
+# Yank selection to tmux buffer and system clipboard (via copy-command).
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
+bind -T copy-mode-vi r send-keys -X rectangle-toggle
 
-# Reload tmux config
-bind r source-file ~/.tmux.conf
+# ---------- Quality of life ----------
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded"
 
-# THEME
-set -g status-bg black
-set -g status-fg white
-#set -g window-status-current-bg white
-#set -g window-status-current-fg black
-#set -g window-status-current-attr bold
+# ---------- Status line ----------
 set -g status-interval 60
+set -g status-position bottom
+set -g status-justify left
+set -g status-style "bg=black,fg=white"
+set -g message-style "bg=black,fg=white"
+set -g pane-border-style "fg=default"
+set -g pane-active-border-style "fg=default"
+
 set -g status-left-length 30
-set -g status-left '#[fg=green](#S) #(whoami)'
-set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
+set -g status-right-length 90
+set -g status-left "#[fg=green](#S) #(whoami)"
+set -g window-status-format " #I:#W "
+set -g status-right '#{?client_prefix,#[fg=yellow]PREFIX #[default],}#[fg=cyan]#H#[default] #[fg=white]%H:%M#[default]'
